--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Daughter-of-an-Empress_2132
-_version: 0.1.0
+_version: 0.2.0
 contributor:
   translator:
     agent_name: Greene, Nathaniel
@@ -11,6 +11,9 @@ contributor:
     deathdate: 1877
     gutenberg_agent_id: '831'
     url: http://www.gutenberg.org/2009/agents/831
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Mühlbach, L. (Luise)
@@ -27,6 +30,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/830
     wikipedia: http://de.wikipedia.org/wiki/Luise_M%C3%BChlbach
 description: Translation of Die Tochter einer Kaiserin.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2132#The-Daughter-of-an-Empress
 gutenberg_issued: '2006-03-26'
 gutenberg_type: Text
 identifiers:
